force-app/main/default/objects/QB_Metadata__c/QB_Metadata__c.object-meta.xml
<CustomObject>
    <label>QB Metadata</label>
    <nameField>
        <label>QuickBooks Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>