force-app/main/default/objects/QB_Metadata__c/fields/QB_Additional_Detail__c.field-meta.xml
<CustomField>
    <fullName>QB_Additional_Detail__c</fullName>
    <label>Additional Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>