force-app/main/default/objects/QB_Metadata__c/fields/QB_Classification__c.field-meta.xml
<CustomField>
    <fullName>QB_Classification__c</fullName>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>