force-app/main/default/objects/QB_Metadata__c/fields/QB_Description__c.field-meta.xml
<CustomField>
    <fullName>QB_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>