force-app/main/default/objects/QB_Metadata__c/fields/QB_Due_Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>QB_Due_Day_of_the_Month__c</fullName>
    <label>Due (Day of the Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>