force-app/main/default/objects/QB_Metadata__c/fields/QB_Due_In_Days__c.field-meta.xml
<CustomField>
    <fullName>QB_Due_In_Days__c</fullName>
    <label>Due (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>