force-app/main/default/objects/QB_Metadata__c/fields/QB_Metadata_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>QB_Metadata_Name_Full__c</fullName>
    <label>Metadata Name (Full)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>