force-app/main/default/objects/QB_Metadata__c/fields/QB_Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>QB_Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>