force-app/main/default/objects/QB_Metadata__c/fields/QB_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Org_Name__c</fullName>
    <label>QuickBooks Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>