force-app/main/default/objects/QB_Metadata__c/fields/QB_Rate__c.field-meta.xml
<CustomField>
    <fullName>QB_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>