force-app/main/default/objects/QB_Metadata__c/fields/QB_Taxable__c.field-meta.xml
<CustomField>
    <fullName>QB_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>